pipeline script changes