@@ -2,5 +2,5 @@ FROM openjdk:17
 EXPOSE 8000
 
 COPY build/libs/*.jar .
-CMD java -jar *.jar
+CMD java --enable-preview -jar *.jar
 
